# Qt-Leptonica

./: .gitattributes  .gitignore  BUG_REPORT.md  CMakeCache.txt  CMakeLists.txt  ChangeLog  Qt-leptonica  README.md  cmake_install.cmake  qt-leptonica.pro  ui_cdbdialog.h  ui_combodialog.h  ui_dpidialog.h  ui_mainwindow.h
Qt-leptonica_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Qt-leptonica_autogen/2NRMJ5X7RK/: moc_cdbdialog.cpp  moc_cdbdialog.cpp.d  moc_combodialog.cpp  moc_combodialog.cpp.d  moc_dpidialog.cpp  moc_dpidialog.cpp.d
Qt-leptonica_autogen/3YJK5W5UP7/: qrc_application.cpp
Qt-leptonica_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_scene.cpp  moc_scene.cpp.d
cmake/: FindLeptonica.cmake
dialogs/: cdbdialog.cpp  cdbdialog.h  cdbdialog.ui  combodialog.cpp  combodialog.h  combodialog.ui  dpidialog.cpp  dpidialog.h  dpidialog.ui  mainwindow.ui
resources/: application.qrc  win.rc
resources/images/: README.md
src/: areaitem.cpp  areaitem.h  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qleptonica.cpp  qleptonica.h  scene.cpp  scene.h  settings.h  undo.cpp
